[package]
name = "eve-log-parser"
version = "0.1.1"
edition = "2021"
authors = ["T'rahk Rokym"]
description = "Crate providing utilities to parse EVE online logs"
repository = "https://github.com/r0kym/eve_log_parser"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
futures = "0.3.30"
home = "0.5.9"
log = "0.4.22"
notify = "6.1.1"
regex = "1.10.5"
serde = { version = "1.0", features = ["derive"] }
